--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_200">#2a4d69</color>
+    <color name="purple_500">#4b86b4</color>
+    <color name="purple_700">#adcbe3</color>
+    <color name="teal_200">#e7eff6</color>
+    <color name="teal_700">#63ace5</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primaryDark">#2a4d69</color>
+    <color name="primary">#4b86b4</color>
+    <color name="primaryLight">#adcbe3</color>
+    <color name="primaryLightV2">#e7eff6</color>
+    <color name="LIGHT">#63ace5</color>
 </resources>
