--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -122,20 +122,27 @@
         app:layout_constraintTop_toBottomOf="@id/sc"
         android:orientation="horizontal"
         >
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:background="@drawable/round"
-
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            app:cardElevation="10dp"
+            app:cardUseCompatPadding="true"
             >
 
-            <ImageView
-                android:layout_margin="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/upload"/>
-        </LinearLayout>
+
+
+                <ImageView
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/upload"
+                    />
+
+
+
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -154,18 +161,34 @@
 
         </LinearLayout>
     </LinearLayout>
-
-    <Button
+    
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        android:textSize="15dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/ll"
+        app:layout_constraintHeight_default="spread"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="10dp"
-        android:id="@+id/calculate"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/breath_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Breath Button"
+            android:textColor="@android:color/white"
+            android:padding="16dp"
+            android:layout_margin="16dp"
+            android:animation="@anim/breath"
+            app:layout_constraintTop_toBottomOf="@+id/ll"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+    </LinearLayout>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
