gallery pick and photos added

--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -134,10 +134,11 @@
 
 
                 <ImageView
+                    android:id="@+id/imagePlaceholder"
                     android:layout_marginHorizontal="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/upload"
+                    android:background="@drawable/upload"
                     />
 
 
